bug boutons à résoudre

--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
 	<title>Tomato</title>
 </head>
 <body>
+	<div>
+		<button id="pomodoro">Pomodoro</button>
+		<button id="shortBreak">Short break</button>
+		<button id="longBreak">Long break</button>
+	</div>
 	<h1></h1>
-	<button id="start">Start</button>
-	<button id="stop">Stop</button>
-	<button id="reset">Reset</button>
+	<div>
+		<button id="start">Start</button>
+		<button id="stop">Stop</button>
+		<button id="reset">Reset</button>
+	</div>
 
 
 	<script src="node_modules/jquery/dist/jquery.js"></script>
