ok 1er codeReview

--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
 </head>
 <body>
 	<div class="">
-		<div class="ui centered aligned grid">
+		<div class="ui tomatoTimer centered aligned grid">
 			<h1 class="tomate">Tomato-timer</h1>
 		</div>
 		<div class="ui blue buttons centered aligned grid">
-			<button class="ui button" id="pomodoro">Pomodoro</button>
-			<button class="ui button" id="shortBreak">Short break</button>
-			<button class="ui button" id="longBreak">Long break</button>
+			<button class="pomodoro ui button" id="pomodoro">Pomodoro</button>
+			<button class="shortBreak ui button" id="shortBreak">Short break</button>
+			<button class="longBreak ui button" id="longBreak">Long break</button>
 		</div>
 		<div class="ui centered aligned grid">
 			<h2 class="time">00:00</h1>
+		</div>
+		<div class="ui centered aligned grid" id="container">
+			
 		</div>
 		<div id="use" class="ui centered aligned grid">
 			<button class="positive ui button" id="start">Start</button>
