--- a/index.html
+++ b/index.html
@@ -19,18 +19,24 @@
 		<div class="ui centered aligned grid">
 			<h2 class="time">00:00</h1>
 			</div>
-			<div class="ui centered aligned grid" id="container">
-				
+
+			<div class="ui centered aligned grid">
 			</div>
+
+			<div class="ui centered aligned grid">
+				<div id="container"></div>
+			</div>
+
 			<div id="use" class="ui centered aligned grid">
 				<button class="positive ui button" id="start">Start</button>
 				<button class="negative ui button" id="stop">Stop</button>
 				<button class="ui grey button" id="reset">Reset</button>
 			</div>
-		</div>
 
 
-		<script src="node_modules/jquery/dist/jquery.js"></script>
-		<script src="app.js"></script>
-	</body>
-	</html>
+
+			<script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
+			<script type="text/javascript" src="node_modules/progressbar.js/dist/progressbar.js"></script>
+			<script type="text/javascript" src="app.js"></script>
+		</body>
+		</html>
